fixed heading spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,12 +12,12 @@ h1{
   }
   h2{
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     padding:10px 0;
   }
   h3{
     font-weight: 600;
-    font-size: 1rem;
+    font-size: 1.1rem;
     padding:10px 0;
     margin: 20px 0px;
   }
@@ -30,6 +30,12 @@ h1{
     margin: 20px 0px;
     font-weight: 600;
     font-size: 1rem;
+  }
+  h6{
+    padding: 8px 0;
+    margin: 10px 0px;
+    font-weight: 400;
+    font-size: 0.6rem;
   }
   ul li{
     list-style-type: disc;
